<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ming.assign1.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_3d_acceleration_values_are" />

    <TextView
        android:text="@string/the_shake_detector_detects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/accelValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/accelValue"
        android:hint="@string/acceleration_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/shakeResult"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/shake_detection_result" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shakeResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:id="@+id/textview6"
        android:hint="@string/input_desired_threshold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/shakeThreshold"
        android:layout_alignTop="@+id/textview6"
        android:layout_toRightOf="@+id/textview6"
        android:layout_toEndOf="@+id/textview6"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:hint="@string/threshold_value"
        android:textAlignment="center" />

    <Button
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="27dp"
        android:layout_marginEnd="27dp"
        android:id="@+id/stopBtn"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/shakeThreshold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp" />

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/startBtn"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:layout_alignBaseline="@+id/stopBtn"
        android:layout_alignBottom="@+id/stopBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/air_pressure_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/startBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pressureText"
        android:hint="@string/air_pressure_value"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignBaseline="@+id/pressureBtn"
        android:layout_alignBottom="@+id/pressureBtn"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <Button
        android:text="@string/get_air_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pressureBtn"
        android:layout_below="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
